--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Final-Front III</title>
+    <link rel="icon" href="/public/favicon.ico" type="image/png" />
+    <title>Dentistas</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
